# gatt

./: Cargo.toml  README.md
att/: Cargo.toml
att/examples/: example.rs  simple.rs
att/src/: addr.rs  handle.rs  handler.rs  lib.rs  macros.rs  pack.rs  packet.rs  server.rs  server2.rs  size.rs  sock.rs  uuid.rs
att/src/packet/: impl_from_iter.rs  impls.rs  pack.rs
examples/: simple.rs
gatt/: Cargo.toml
gatt/examples/: example.rs  simple.rs  simple_gatt.rs
gatt/src/: attribute.rs  characteristics.rs  database.rs  lib.rs  registration.rs  server.rs  services.rs
src/: addr.rs  lib.rs  packet.rs  registration.rs  server.rs  services.rs  sock.rs
src/packet/: impl_from_iter.rs
