[package]
name = "gatt"
version = "0.2.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "Bluetooth Generic Attribute Protocol Server"
repository = "https://github.com/yskszk63/gatt"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth"]
readme = "README.md"
resolver = "2"

[dependencies]
att = { path = "att", version = "0.2.0"}
bitflags = "1.2"
thiserror = "1.0"
futures-util = "0.3"
futures-channel = "0.3"
tokio = "1.8"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.8", features = ["rt", "macros", "io-util"] }
anyhow = "1.0"
pretty_env_logger = "0.4"

[workspace]
members = [
    "att",
]
