[package]
name = "att"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "Bluetooth Attribute Protocol Server"
repository = "https://github.com/yskszk63/gatt"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth"]

[dependencies]
libc = "0.2"
socket2 = "0.3"
tokio = { version = "0.3", features = ["net", "macros", "sync"] }
bytes = "0.6"
thiserror = "1.0"
uuid = "0.8"
derive-new = "0.5"
getset = "0.1"
log = "0.4"
bdaddr = "0.1"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "0.3", features = ["rt", "macros"] }
