[package]
name = "att"
version = "0.2.1"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "Bluetooth Attribute Protocol Server"
repository = "https://github.com/yskszk63/gatt"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth"]

[dependencies]
libc = "0.2"
socket2 = { version = "0.4", features = ["all"] }
futures-core = { version = "0.3", default-features = false }
futures-sink = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1.8", features = ["net"] }
thiserror = "1.0"
uuid = "0.8"
derive-new = "0.5"
getset = "0.1"
log = "0.4"
bdaddr = "0.1"

[dev-dependencies]
anyhow = "1.0"
pretty_env_logger = "0.4.0"
tokio = { version = "1.8", features = ["rt", "macros", "io-util"] }
tokio-test = "0.4.2"
