[package]
name = "gatt"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "Bluetooth Generic Attribute Protocol Server"
repository = "https://github.com/yskszk63/gatt"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth"]
readme = "../README.md"

[dependencies]
att = { path = "../att/", version = "0.1.0"}
bitflags = "1.2"
bytes = "0.6"
thiserror = "1.0"
tokio = { version = "0.3", features = ["sync"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "0.3", features = ["rt", "macros"] }
anyhow = "1.0"
env_logger = "0.8"
